--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,5 @@ jobs:
           plugin_languages: yes
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
+          plugin_languages_details: bytes-size, percentage 
           plugin_lines: yes
