--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           plugin_activity_days: 14
           plugin_activity_filter: all
           plugin_activity_limit: 5
-          plugin_activity_visibility: all
+          plugin_activity_visibility: public
           plugin_followup: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
